--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec babel-node src/app.js",
-    "prestart": "babel src --out-dir dist",
+    "build": "babel src --out-dir dist",
     "start": "node dist/app.js"
   },
   "author": "",
